--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
    <h1>I love Bangladesh.</h1> 
    <h3>Welcome to Bangladesh</h3>
+   <img src="Ban.jpg" align="center" alt="">
 </body>
 </html>
