--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
    <h1>I love Bangladesh.</h1> 
    <h3>Welcome to Bangladesh</h3>
-   <img src="Ban.jpg" align="center" alt="">
+   <img src="Ban.jpg" height="300px" width="auto" class="center" alt="">
 </body>
 </html>
